--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a lang="en" href="./index.html"> WebStudio </a>
         <ul>
           <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
@@ -68,14 +68,28 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/box-1.jpg" alt="Програмирование" width="370" height="294"/>
-          </li>
-          <li>
-            <img src="./images/box-2.jpg" alt="Дизайн проекта" width="370" height="294"/>
+            <img
+              src="./images/box-1.jpg"
+              alt="Програмирование"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
             <img
-              src="./images/box-3.jpg" alt="Выбор цветовой гаммы" width="370" height="294"/>
+              src="./images/box-2.jpg"
+              alt="Дизайн проекта"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/box-3.jpg"
+              alt="Выбор цветовой гаммы"
+              width="370"
+              height="294"
+            />
           </li>
         </ul>
       </section>
@@ -86,14 +100,19 @@
             <img
               src="./images/img-1.jpg"
               alt="Фото Игорь Демьяненко"
-              width="270" height="260"/>
+              width="270"
+              height="260"
+            />
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/img-2.jpg" 
-              alt="Фото Ольга Репина" 
-              width="270" height="260" />
+            <img
+              src="./images/img-2.jpg"
+              alt="Фото Ольга Репина"
+              width="270"
+              height="260"
+            />
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
@@ -101,7 +120,8 @@
             <img
               src="./images/img-3.jpg"
               alt="Фото Николай Тарасов"
-              width="270" height="260"
+              width="270"
+              height="260"
             />
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
@@ -110,7 +130,8 @@
             <img
               src="./images/img-4.jpg"
               alt="Фото Михаил Ермаков"
-              width="270" height="260"
+              width="270"
+              height="260"
             />
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
@@ -122,7 +143,14 @@
       <a lang="en" href="./index.html"> WebStudio </a>
       <address>
         <ul>
-          <li><a href="https://goo.gl/maps/EqLQEGzMM47ydBD1A" target="_blank" rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/EqLQEGzMM47ydBD1A"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
           <li>
             <a lang="en" href="mailto:info@example.com"> info@example.com</a>
           </li>
