--- a/index.html
+++ b/index.html
@@ -5,22 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a lang="en" href="./index.html"> WebStudio </a>
+        <a class="logo" lang="en" href="./index.html"
+          ><span class="logo-web">Web</span>Studio
+        </a>
         <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="header-nav" href="./index.html">Студия</a></li>
+          <li><a class="header-nav" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="header-nav" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
         <li>
-          <a lang="en" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+          <a class="header-address" lang="en" href="mailto:info@devstudio.com">
+            info@devstudio.com</a
+          >
         </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="header-address" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
