--- a/portfolio.html
+++ b/portfolio.html
@@ -5,33 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a lang="en" href="./index.html"> WebStudio </a>
+        <a class="logo" lang="en" href="./index.html"
+          ><span class="logo-web">Web</span>Studio
+        </a>
         <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="header-nav" href="./index.html">Студия</a></li>
+          <li><a class="header-nav" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="header-nav" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
         <li>
-          <a lang="en" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+          <a class="header-address" lang="en" href="mailto:info@devstudio.com">
+            info@devstudio.com</a
+          >
         </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="header-address" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
       <section>
         <h2 hidden>Фильтр по странице</h2>
         <ul>
-          <li><a href="">Все</a></li>
-          <li><a href="">Веб-сайты</a></li>
-          <li><a href="">Приложения</a></li>
-          <li><a href="">Дизайн</a></li>
-          <li><a href="">Маркетинг</a></li>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
         </ul>
       </section>
       <section>
