--- a/portfolio.html
+++ b/portfolio.html
@@ -139,8 +139,10 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a lang="en" href="./index.html"> WebStudio </a>
+    <footer class="footer">
+      <a class="logo-footer" lang="en" href="./index.html"
+        ><span class="logo-web">Web</span>Studio
+      </a>
       <address>
         <ul>
           <li>
