--- a/index.html
+++ b/index.html
@@ -5,78 +5,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
       <nav>
-        <a class="logo" lang="en" href="./index.html"
-          ><span class="logo-web">Web</span>Studio
+        <a class="header-logo link" lang="en" href="./index.html"
+          ><span class="header-logo-web">Web</span>Studio
         </a>
-        <ul>
-          <li><a class="header-nav" href="./index.html">Студия</a></li>
-          <li><a class="header-nav" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="header-nav" href="">Контакты</a></li>
+        <ul class="list">
+          <li class="header-item">
+            <a class="link header-link" href="./index.html">Студия</a>
+          </li>
+          <li class="header-item">
+            <a class="link header-link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="header-item">
+            <a class="link header-link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
-          <a class="header-address" lang="en" href="mailto:info@devstudio.com">
+          <a
+            class="header-mail link"
+            lang="en"
+            href="mailto:info@devstudio.com"
+          >
             info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="header-address" href="tel:+380961111111"
+          <a class="header-tel link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>
+      <section class="hero">
+        <h1 class="hero-title">
           Эффективные решения<br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+        <button class="btn" type="button">Заказать услугу</button>
       </section>
-      <section>
+      <section class="advantage">
         <h2 hidden>Наши преимущества</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+        <ul class="list advantage-list">
+          <li class="advantage-item">
+            <h3 class="advatage-title">Внимание к деталям</h3>
+            <p class="advatage-after-title">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="advantage-item">
+            <h3 class="advatage-title">Пунктуальность</h3>
+            <p class="advatage-after-title">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="advantage-item">
+            <h3 class="advatage-title">Планирование</h3>
+            <p class="advatage-after-title">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
+          <li class="advantage-item">
+            <h3 class="advatage-title">Современные технологии</h3>
+            <p class="advatage-after-title">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="about">
+        <h2 class="about-title">Чем мы занимаемся</h2>
+        <ul class="list about-list">
+          <li class="about-item">
             <img
               src="./images/box-1.jpg"
               alt="Програмирование"
@@ -84,7 +100,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/box-2.jpg"
               alt="Дизайн проекта"
@@ -92,7 +108,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/box-3.jpg"
               alt="Выбор цветовой гаммы"
@@ -102,39 +118,39 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list team-list">
+          <li class="team-item">
             <img
               src="./images/img-1.jpg"
               alt="Фото Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p class="team-post" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/img-2.jpg"
               alt="Фото Ольга Репина"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-name">Ольга Репина</h3>
+            <p class="team-post" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/img-3.jpg"
               alt="Фото Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
-          </li>
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p class="team-post" lang="en">Marketing</p>
+          </li class="team-item">
           <li>
             <img
               src="./images/img-4.jpg"
@@ -142,30 +158,30 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p class="team-post" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-footer" lang="en" href="./index.html"
+      <a class="logo-footer link" lang="en" href="./index.html"
         ><span class="logo-web">Web</span>Studio
       </a>
-      <address>
-        <ul>
-          <li>
-            <a
+      <address class="address">
+        <ul class="list">
+          <li class="address-item">
+            <a class="link address-link"
               href="https://goo.gl/maps/EqLQEGzMM47ydBD1A"
               target="_blank"
               rel="noopener noreferrer nofollow"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
-            <a lang="en" href="mailto:info@example.com"> info@example.com</a>
+          <li class="address-item">
+            <a class="link address-link lang="en" href="mailto:info@example.com"> info@example.com</a>
           </li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li class="address-item"><a class="link address-link href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
