--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </a>
         <ul class="list">
           <li class="header-item">
-            <a class="link header-link" href="./index.html">Студия</a>
+            <a class="link header-link highlighted" href="./index.html"
+              >Студия</a
+            >
           </li>
           <li class="header-item">
             <a class="link header-link" href="./portfolio.html">Портфолио</a>
@@ -32,7 +34,7 @@
         </ul>
       </nav>
       <ul class="list">
-        <li>
+        <li class="header-item">
           <a
             class="header-mail link"
             lang="en"
@@ -41,7 +43,7 @@
             info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="header-item">
           <a class="header-tel link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
@@ -54,7 +56,7 @@
           Эффективные решения<br />
           для вашего бизнеса
         </h1>
-        <button class="btn" type="button">Заказать услугу</button>
+        <button class="hero-btn" type="button">Заказать услугу</button>
       </section>
       <section class="advantage">
         <h2 hidden>Наши преимущества</h2>
@@ -150,8 +152,8 @@
             />
             <h3 class="team-name">Николай Тарасов</h3>
             <p class="team-post" lang="en">Marketing</p>
-          </li class="team-item">
-          <li>
+          </li>
+          <li class="team-item">
             <img
               src="./images/img-4.jpg"
               alt="Фото Михаил Ермаков"
@@ -165,13 +167,14 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-footer link" lang="en" href="./index.html"
-        ><span class="logo-web">Web</span>Studio
+      <a class="footer-logo link" lang="en" href="./index.html"
+        ><span class="footer-logo-web">Web</span>Studio
       </a>
       <address class="address">
         <ul class="list">
           <li class="address-item">
-            <a class="link address-link"
+            <a
+              class="link address-link"
               href="https://goo.gl/maps/EqLQEGzMM47ydBD1A"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -179,9 +182,19 @@
             >
           </li>
           <li class="address-item">
-            <a class="link address-link lang="en" href="mailto:info@example.com"> info@example.com</a>
+            <a
+              class="link footer-mail"
+              lang="en"
+              href="mailto:info@example.com"
+            >
+              info@example.com</a
+            >
           </li>
-          <li class="address-item"><a class="link address-link href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li class="address-item">
+            <a class="link footer-tel" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
