--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,9 @@
             <a class="link header-link" href="./index.html">Студия</a>
           </li>
           <li class="header-item">
-            <a class="link header-link" href="./portfolio.html">Портфолио</a>
+            <a class="link header-link highlighted" href="./portfolio.html"
+              >Портфолио</a
+            >
           </li>
           <li class="header-item">
             <a class="link header-link" href="">Контакты</a>
@@ -32,7 +34,7 @@
         </ul>
       </nav>
       <ul class="list">
-        <li>
+        <li class="header-item">
           <a
             class="header-mail link"
             lang="en"
@@ -41,7 +43,7 @@
             info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="header-item">
           <a class="header-tel link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
@@ -52,11 +54,23 @@
       <section class="portfolio">
         <h2 hidden>Фильтр по работам</h2>
         <ul class="list portfolio-list">
-          <li class="portfolio-item"><button class="btn" type="button">Все</button></li>
-          <li class="portfolio-item"><button class="btn" type="button">Веб-сайты</button></li>
-          <li class="portfolio-item"><button class="btn" type="button">Приложения</button></li>
-          <li class="portfolio-item"><button class="btn" type="button">Дизайн</button></li>
-          <li class="portfolio-item"><button class="btn" type="button">Маркетинг</button></li>
+          <li class="portfolio-item">
+            <button class="portfolio-btn portfolio-highlighted" type="button">
+              Все
+            </button>
+          </li>
+          <li class="portfolio-item">
+            <button class="portfolio-btn" type="button">Веб-сайты</button>
+          </li>
+          <li class="portfolio-item">
+            <button class="portfolio-btn" type="button">Приложения</button>
+          </li>
+          <li class="portfolio-item">
+            <button class="portfolio-btn" type="button">Дизайн</button>
+          </li>
+          <li class="portfolio-item">
+            <button class="portfolio-btn" type="button">Маркетинг</button>
+          </li>
         </ul>
         <h2 hidden>Список работ</h2>
         <ul class="list portfolio-list">
@@ -77,7 +91,9 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+            <h3 class="portfolio-title">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h3>
             <p class="portfolio-after-title">Дизайн</p>
           </li>
           <li class="portfolio-item">
@@ -87,7 +103,9 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
+            <h3 class="portfolio-title">
+              Ресторан <span lang="en">Seafood</span>
+            </h3>
             <p class="portfolio-after-title">Приложение</p>
           </li>
           <li class="portfolio-item">
@@ -117,7 +135,9 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title" lang="en">Inspiration has no Borders</h3>
+            <h3 class="portfolio-title" lang="en">
+              Inspiration has no Borders
+            </h3>
             <p class="portfolio-after-title">Веб-сайт</p>
           </li>
           <li class="portfolio-item">
@@ -127,7 +147,9 @@
               width="370"
               height="294"
             />
-            <h3 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h3>
+            <h3 class="portfolio-title">
+              Издание <span lang="en">Limited Edition</span>
+            </h3>
             <p class="portfolio-after-title">Дизайн</p>
           </li>
           <li class="portfolio-item">
@@ -154,13 +176,14 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-footer link" lang="en" href="./index.html"
-        ><span class="logo-web">Web</span>Studio
+      <a class="footer-logo link" lang="en" href="./index.html"
+        ><span class="footer-logo-web">Web</span>Studio
       </a>
       <address class="address">
         <ul class="list">
           <li class="address-item">
-            <a class="link address-link"
+            <a
+              class="link address-link"
               href="https://goo.gl/maps/EqLQEGzMM47ydBD1A"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -168,9 +191,19 @@
             >
           </li>
           <li class="address-item">
-            <a class="link address-link lang="en" href="mailto:info@example.com"> info@example.com</a>
+            <a
+              class="link footer-mail"
+              lang="en"
+              href="mailto:info@example.com"
+            >
+              info@example.com</a
+            >
           </li>
-          <li class="address-item"><a class="link address-link href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li class="address-item">
+            <a class="link footer-tel" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
