--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <header class="header">
       <nav>
-        <a class="header-logo link" lang="en" href="./index.html"
-          ><span class="header-logo-web">Web</span>Studio
+        <a class="logo link" lang="en" href="./index.html"
+          >Web<span class="header-logo-studio">Studio</span>
         </a>
         <ul class="list">
           <li class="header-item">
@@ -59,7 +59,7 @@
         <button class="hero-btn" type="button">Заказать услугу</button>
       </section>
       <section class="advantage">
-        <h2 hidden>Наши преимущества</h2>
+        <h2 class="hidden">Наши преимущества</h2>
         <ul class="list advantage-list">
           <li class="advantage-item">
             <h3 class="advatage-title">Внимание к деталям</h3>
@@ -167,8 +167,8 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo link" lang="en" href="./index.html"
-        ><span class="footer-logo-web">Web</span>Studio
+      <a class="logo link" lang="en" href="./index.html"
+        >Web<span class="footer-logo">Studio</span>
       </a>
       <address class="address">
         <ul class="list">
