--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
   <body>
     <header class="header">
       <nav>
-        <a class="header-logo link" lang="en" href="./index.html"
-          ><span class="header-logo-web">Web</span>Studio
+        <a class="logo link" lang="en" href="./index.html"
+          >Web<span class="header-logo-studio">Studio</span>
         </a>
         <ul class="list">
           <li class="header-item">
@@ -52,7 +52,7 @@
     </header>
     <main>
       <section class="portfolio">
-        <h2 hidden>Фильтр по работам</h2>
+        <h1 class="hidden">Наши работы</h1>
         <ul class="list portfolio-list">
           <li class="portfolio-item">
             <button class="portfolio-btn portfolio-highlighted" type="button">
@@ -72,112 +72,178 @@
             <button class="portfolio-btn" type="button">Маркетинг</button>
           </li>
         </ul>
-        <h2 hidden>Список работ</h2>
         <ul class="list portfolio-list">
           <li class="portfolio-item">
-            <img
-              src="./images/portfolio-1.jpg"
-              alt="Ноутбук"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Технокряк</h3>
-            <p class="portfolio-after-title">Веб-сайт</p>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              <img
+                src="./images/portfolio-1.jpg"
+                alt="Ноутбук"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Технокряк</h2>
+              <p class="portfolio-after-title">Веб-сайт</p></a
+            >
           </li>
           <li class="portfolio-item">
-            <img
-              src="./images/portfolio-2.jpg"
-              alt="Постер баскетбол"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">
-              Постер <span lang="en">New Orlean vs Golden Star</span>
-            </h3>
-            <p class="portfolio-after-title">Дизайн</p>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              <img
+                src="./images/portfolio-2.jpg"
+                alt="Постер баскетбол"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">
+                Постер <span lang="en">New Orlean vs Golden Star</span>
+              </h2>
+              <p class="portfolio-after-title">Дизайн</p></a
+            >
           </li>
           <li class="portfolio-item">
-            <img
-              src="./images/portfolio-3.jpg"
-              alt="Лого ресторана"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">
-              Ресторан <span lang="en">Seafood</span>
-            </h3>
-            <p class="portfolio-after-title">Приложение</p>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              <img
+                src="./images/portfolio-3.jpg"
+                alt="Лого ресторана"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">
+                Ресторан <span lang="en">Seafood</span>
+              </h2>
+              <p class="portfolio-after-title">Приложение</p></a
+            >
           </li>
           <li class="portfolio-item">
-            <img
-              src="./images/portfolio-4.jpg"
-              alt="Наушники"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
-            <p class="portfolio-after-title">Маркетинг</p>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              <img
+                src="./images/portfolio-4.jpg"
+                alt="Наушники"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">
+                Проект <span lang="en">Prime</span>
+              </h2>
+              <p class="portfolio-after-title">Маркетинг</p></a
+            >
           </li>
           <li class="portfolio-item">
-            <img
-              src="./images/portfolio-5.jpg"
-              alt="Коробки"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
-            <p class="portfolio-after-title">Приложение</p>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              <img
+                src="./images/portfolio-5.jpg"
+                alt="Коробки"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">
+                Проект <span lang="en">Boxes</span>
+              </h2>
+              <p class="portfolio-after-title">Приложение</p></a
+            >
           </li>
           <li class="portfolio-item">
-            <img
-              src="./images/portfolio-6.jpg"
-              alt="Монитор"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title" lang="en">
-              Inspiration has no Borders
-            </h3>
-            <p class="portfolio-after-title">Веб-сайт</p>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              <img
+                src="./images/portfolio-6.jpg"
+                alt="Монитор"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title" lang="en">
+                Inspiration has no Borders
+              </h2>
+              <p class="portfolio-after-title">Веб-сайт</p></a
+            >
           </li>
           <li class="portfolio-item">
-            <img
-              src="./images/portfolio-7.jpg"
-              alt="Книга"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">
-              Издание <span lang="en">Limited Edition</span>
-            </h3>
-            <p class="portfolio-after-title">Дизайн</p>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              <img
+                src="./images/portfolio-7.jpg"
+                alt="Книга"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">
+                Издание <span lang="en">Limited Edition</span>
+              </h2>
+              <p class="portfolio-after-title">Дизайн</p></a
+            >
           </li>
           <li class="portfolio-item">
-            <img
-              src="./images/portfolio-8.jpg"
-              alt="Лейба"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Проект <span lang="en">LAB</span></h3>
-            <p class="portfolio-after-title">Маркетинг</p>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              <img
+                src="./images/portfolio-8.jpg"
+                alt="Лейба"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
+              <p class="portfolio-after-title">Маркетинг</p></a
+            >
           </li>
           <li class="portfolio-item">
-            <img
-              src="./images/portfolio-9.jpg"
-              alt="Работа за ноутбуком"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title" lang="en">Growing Business</h3>
-            <p class="portfolio-after-title">Приложение</p>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              <img
+                src="./images/portfolio-9.jpg"
+                alt="Работа за ноутбуком"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title" lang="en">Growing Business</h2>
+              <p class="portfolio-after-title">Приложение</p></a
+            >
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo link" lang="en" href="./index.html"
-        ><span class="footer-logo-web">Web</span>Studio
+      <a class="logo link" lang="en" href="./index.html"
+        >Web<span class="footer-logo">Studio</span>
       </a>
       <address class="address">
         <ul class="list">
